--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -811,6 +811,13 @@ html, body, #root, .app {
       flex: 0 0 100%;
       max-width: 100%;
 
+      .list-item .list-item-value{
+      width:130px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
       .card-deck {
         padding: 20px 10px 0 10px;
 
